@@ -16,9 +16,11 @@
  */
 package org.apache.solr.rest;
 
+import static org.apache.solr.common.params.CommonParams.JSON;
+
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
-
+import java.nio.charset.StandardCharsets;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.util.NamedList;
@@ -30,11 +32,11 @@ import org.apache.solr.response.SolrQueryResponse;
 import org.apache.solr.schema.IndexSchema;
 import org.apache.solr.servlet.ResponseUtils;
 import org.slf4j.Logger;
-import static org.apache.solr.common.params.CommonParams.JSON;
 
 /**
- * Base class for delegating REST-oriented requests to ManagedResources. ManagedResources are heavy-weight and
- * should not be created for every request, so this class serves as a gateway between a REST call and the resource.
+ * Base class for delegating REST-oriented requests to ManagedResources. ManagedResources are
+ * heavy-weight and should not be created for every request, so this class serves as a gateway
+ * between a REST call and the resource.
  */
 public abstract class BaseSolrResource {
   protected static final String SHOW_DEFAULTS = "showDefaults";
@@ -49,22 +51,37 @@ public abstract class BaseSolrResource {
   private int updateTimeoutSecs = -1;
   private int statusCode = -1;
 
-  public SolrCore getSolrCore() { return solrCore; }
-  public IndexSchema getSchema() { return schema; }
-  public SolrQueryRequest getSolrRequest() { return solrRequest; }
-  public SolrQueryResponse getSolrResponse() { return solrResponse; }
-  public String getContentType() { return contentType; }
-  protected int getUpdateTimeoutSecs() { return updateTimeoutSecs; }
+  public SolrCore getSolrCore() {
+    return solrCore;
+  }
+
+  public IndexSchema getSchema() {
+    return schema;
+  }
+
+  public SolrQueryRequest getSolrRequest() {
+    return solrRequest;
+  }
+
+  public SolrQueryResponse getSolrResponse() {
+    return solrResponse;
+  }
+
+  public String getContentType() {
+    return contentType;
+  }
+
+  protected int getUpdateTimeoutSecs() {
+    return updateTimeoutSecs;
+  }
 
   protected BaseSolrResource() {
     super();
   }
 
   /**
-   * Pulls the SolrQueryRequest constructed in SolrDispatchFilter
-   * from the SolrRequestInfo thread local, then gets the SolrCore
-   * and IndexSchema and sets up the response.
-   * writer.
+   * Pulls the SolrQueryRequest constructed in SolrDispatchFilter from the SolrRequestInfo thread
+   * local, then gets the SolrCore and IndexSchema and sets up the response. writer.
    */
   public void doInit(SolrQueryRequest solrRequest, SolrQueryResponse solrResponse) {
     try {
@@ -76,9 +93,9 @@ public abstract class BaseSolrResource {
       responseWriter = solrCore.getQueryResponseWriter(responseWriterName);
       contentType = responseWriter.getContentType(solrRequest, solrResponse);
       final String path = solrRequest.getPath();
-      if ( ! RestManager.SCHEMA_BASE_PATH.equals(path)) {
+      if (!RestManager.SCHEMA_BASE_PATH.equals(path)) {
         // don't set webapp property on the request when context and core/collection are excluded
-        final int cutoffPoint = path.indexOf("/", 1);
+        final int cutoffPoint = path.indexOf('/', 1);
         final String firstPathElement = -1 == cutoffPoint ? path : path.substring(0, cutoffPoint);
         solrRequest.getContext().put("webapp", firstPathElement); // Context path
       }
@@ -96,40 +113,46 @@ public abstract class BaseSolrResource {
   }
 
   /**
-   * Deal with an exception on the SolrResponse, fill in response header info,
-   * and log the accumulated messages on the SolrResponse.
+   * Deal with an exception on the SolrResponse, fill in response header info, and log the
+   * accumulated messages on the SolrResponse.
    */
   protected void handlePostExecution(Logger log) {
-    
+
     handleException(log);
 
     addDeprecatedWarning();
 
     if (log.isInfoEnabled() && solrResponse.getToLog().size() > 0) {
-      log.info(solrResponse.getToLogAsString(solrCore.getLogId()));
+      log.info(solrResponse.getToLogAsString());
     }
   }
 
-  protected void addDeprecatedWarning(){
-    solrResponse.add("warn","This API is deprecated");
+  protected void addDeprecatedWarning() {
+    solrResponse.add("warn", "This API is deprecated");
   }
 
   /**
    * If there is an exception on the SolrResponse:
+   *
    * <ul>
-   *   <li>error info is added to the SolrResponse;</li>
-   *   <li>the response status code is set to the error code from the exception; and</li>
-   *   <li>the exception message is added to the list of things to be logged.</li>
+   *   <li>error info is added to the SolrResponse;
+   *   <li>the response status code is set to the error code from the exception; and
+   *   <li>the exception message is added to the list of things to be logged.
    * </ul>
    */
   protected void handleException(Logger log) {
     Exception exception = getSolrResponse().getException();
     if (null != exception) {
       NamedList<Object> info = new SimpleOrderedMap<>();
-      this.statusCode = ResponseUtils.getErrorInfo(exception, info, log);
+      this.statusCode =
+          ResponseUtils.getErrorInfo(
+              exception,
+              info,
+              log,
+              solrCore != null && solrCore.getCoreContainer().hideStackTrace());
       getSolrResponse().add("error", info);
-      String message = (String)info.get("msg");
-      if (null != message && ! message.trim().isEmpty()) {
+      String message = (String) info.get("msg");
+      if (null != message && !message.trim().isEmpty()) {
         getSolrResponse().getToLog().add("msg", "{" + message.trim() + "}");
       }
     }
@@ -137,6 +160,6 @@ public abstract class BaseSolrResource {
 
   /** Decode URL-encoded strings as UTF-8, and avoid converting "+" to space */
   protected static String urlDecode(String str) throws UnsupportedEncodingException {
-    return URLDecoder.decode(str.replace("+", "%2B"), "UTF-8");
+    return URLDecoder.decode(str.replace("+", "%2B"), StandardCharsets.UTF_8);
   }
 }
